--- a/KmetApp/templates/accounts/login.html
+++ b/KmetApp/templates/accounts/login.html
@@ -36,7 +36,7 @@
 			<div class="form-group">
 			
 			<br>
-			<button type="submit" class="btn btn-lg btn-info">Register</button>
+			<button type="submit" class="btn btn-lg btn-info">Prijavi</button>
 			<br>
             </div>
             </div>
