--- a/KmetApp/templates/__base__.html
+++ b/KmetApp/templates/__base__.html
@@ -48,62 +48,84 @@
 <body ng-app="KmetApp" ng-controller="MainController">
 
     <!-- Navigation -->
-    <nav class="navbar navbar-default navbar-custom navbar-fixed-top">
-        <div class="container-fluid">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header page-scroll">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-            </div>
-            
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a href="{% url 'KmetApp:home' %}">Domov</a>
-                    </li>
-                    {% if user.is_authenticated %}
-                    <li>
-                        <a href ="{% url 'KmetApp:Edit' %}">Urejanje Profila</a>
-                    </li>
+<nav class="navbar navbar-default navbar-custom navbar-fixed-top">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header ">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+     
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav navbar-right">
+        <li> <a href="{% url 'KmetApp:home' %}">Domov</a>
+         <li>{% if user.is_authenticated %}
+                <a href ="{% url 'KmetApp:Edit' %}">Urejanje Profila</a>
                     {% endif %}
-                    <li class = "oglas">                  
-                        <a  href="{% url 'KmetApp:oglas' %}">Oglasi</a> 
-                            <ul>
-                                <li><a href="{% url 'KmetApp:oglas_O' %}">Oddaja oglasa</a>
-                                <li><a ng-href ="{% url 'KmetApp:oglas_M' %}" > Moji oglasi </a>
-                            </ul>                  
-                    </li>
-                    <li class= "oglas">
-                        <a href="{% url 'KmetApp:narocilo' %}" >Narocila</a>
-                            <ul>
-                                <li><a href ="{% url 'KmetApp:narocilo_E' %}">Moja naročila</a>
-                                <li><a href ="{% url 'KmetApp:narocilo_IO' %}">Obdelana naročila</a>
-                            </ul>
-                    </li>
-                    <li class = "oglas">
-                        <a href="{% url 'KmetApp:kosarica' %}">Košarica</a>
-                        <ul>
-                                <li><a href="{% url 'KmetApp:kosarica_O' %}">Oddaja oglasa</a>
-                                <li><a href ="{% url 'KmetApp:kosarica_E' %}"> Moji oglasi </a>
-                        </ul> 
-                    </li>
-                     <li class= "oglas">
-                        <a href="{% url 'KmetApp:narocila_K_N' %}" >Narocila K</a>
-                            <ul>
-                                <li><a href ="{% url 'KmetApp:narocila_K_M' %}">Moja naročila</a>
-                                <li><a href ="{% url 'KmetApp:narocila_K_O' %}">Obdelana naročila</a>
-                            </ul>
-                    </li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Oglasi <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+             <ul style="padding-left: 0">
+                    <li> <a  href="{% url 'KmetApp:oglas' %}">Iskanje oglasov</a> 
+                     {% if user.is_authenticated %}
+                    <li><a href="{% url 'KmetApp:oglas_O' %}">Oddaja oglasa</a>
+                    <li><a href ="{% url 'KmetApp:oglas_M' %}">Moji oglasi </a>
+                    {% endif %}
+             </ul>
+          </ul>
+        </li>
+         
+          </li>
+           {% if user.is_authenticated %}
+           <li class="dropdown">
+           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Naročila za oglase<span class="caret"></span></a>
+          <ul class="dropdown-menu">
+             <ul>
+             <li><a href="{% url 'KmetApp:narocilo' %}" >Neobdelana Narocila</a>
+              <li><a href ="{% url 'KmetApp:narocilo_E' %}">Moja naročila</a>
+                 <li><a href ="{% url 'KmetApp:narocilo_IO' %}">Obdelana naročila</a>
+             </ul>
+      </ul>
+      </li>
+          {% endif %}
+
+         <li class="dropdown">
+           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Košarica <span class="caret"></span></a>
+          <ul class="dropdown-menu" >
+             <ul style="padding-left : 0">
+                <li>  <a href="{% url 'KmetApp:kosarica' %}">Iskanje Košaric</a>
+                {% if user.is_authenticated %}
+                 <li><a href="{% url 'KmetApp:kosarica_O' %}">Oddaja oglasa</a>
+                 <li><a href ="{% url 'KmetApp:kosarica_E' %}"> Moji oglasi </a>
+                  {% endif %}
+             </ul>
+      </ul>
+      </li>
+      {% if user.is_authenticated %}
+       <li class="dropdown">
+           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Naročila za košarico <span class="caret"></span></a>
+
+          <ul class="dropdown-menu">
+             <ul>
+                <li><a href="{% url 'KmetApp:narocilo' %}" >Neobdelana Narocila</a>
+                <li><a href ="{% url 'KmetApp:narocilo_E' %}">Moja naročila</a>
+                <li><a href ="{% url 'KmetApp:narocilo_IO' %}">Obdelana naročila</a>
+             </ul>
+        </ul>
+   
+        </ul>
+         {% endif %}
+         </li>
                 </ul>
-				<ul class = "nav navbar-nav navbar-left">
-				<li>
                 {% block prijava %}
-				{% endblock %}	 
+                {% endblock %}   
+                  
             </div>
             <!-- /.navbar-collapse -->
         </div>
@@ -119,7 +141,7 @@
                     <div class="site-heading">
                         <h1>Veseli kmet</h1>
                         <hr class="small">
-                        <span class="subheading">A Clean Blog Theme by Start Bootstrap</span>
+                       
                     </div>
                 </div>
             </div>
