--- a/KmetApp/templates/index.html
+++ b/KmetApp/templates/index.html
@@ -1,18 +1,24 @@
 {% extends '__base__.html' %}
 
 {% block prijava %}
-{% if user.is_authenticated %}
 
+ <ul class = "nav navbar-nav navbar-left">
+    
+{% if user.is_authenticated %}
+<li>
 <a href = "{% url 'KmetApp:logOut' %}">Log Out </a>
 
 {% else %}
+<li>
 <a href = "{% url 'KmetApp:prijava' %}">Prijava </a>
-</li>
+
 <li>
 <a href = "{% url 'KmetApp:reg' %}">Registracija</a>
-</li>
-</ul>
+
+
+
 {% endif %}
+</ul>
 {% endblock %}
 
 
