--- a/KmetApp/templates/kosarica/add_K.html
+++ b/KmetApp/templates/kosarica/add_K.html
@@ -1,5 +1,24 @@
 {% extends '__base__.html' %}
+{% block prijava %}
 
+ <ul class = "nav navbar-nav navbar-left">
+    
+{% if user.is_authenticated %}
+<li>
+<a href = "{% url 'KmetApp:logOut' %}">Log Out </a>
+
+{% else %}
+<li>
+<a href = "{% url 'KmetApp:prijava' %}">Prijava </a>
+
+<li>
+<a href = "{% url 'KmetApp:reg' %}">Registracija</a>
+
+
+
+{% endif %}
+</ul>
+{% endblock %}
 {% block content %}
 
 
