--- a/KmetApp/templates/kosarica/edit_K.html
+++ b/KmetApp/templates/kosarica/edit_K.html
@@ -1,22 +1,26 @@
 {% extends '__base__.html' %}
 {% load staticfiles %}
 {% csrf_token %}
-
 {% block prijava %}
-{% if user.is_authenticated %}
 
+ <ul class = "nav navbar-nav navbar-left">
+    
+{% if user.is_authenticated %}
+<li>
 <a href = "{% url 'KmetApp:logOut' %}">Log Out </a>
 
 {% else %}
+<li>
 <a href = "{% url 'KmetApp:prijava' %}">Prijava </a>
-</li>
+
 <li>
 <a href = "{% url 'KmetApp:reg' %}">Registracija</a>
-</li>
-</ul>
-{% endif %}
-{% endblock %}
 
+
+
+{% endif %}
+</ul>
+{% endblock %}
 
 
 {% block hdr %}
