--- a/KmetApp/templates/narocilo_K/index_N.html
+++ b/KmetApp/templates/narocilo_K/index_N.html
@@ -1,20 +1,25 @@
 {% extends '__base__.html' %}
 {% load staticfiles %}
 {% block prijava %}
-{% if user.is_authenticated %}
 
+ <ul class = "nav navbar-nav navbar-left">
+    
+{% if user.is_authenticated %}
+<li>
 <a href = "{% url 'KmetApp:logOut' %}">Log Out </a>
 
 {% else %}
+<li>
 <a href = "{% url 'KmetApp:prijava' %}">Prijava </a>
-</li>
+
 <li>
 <a href = "{% url 'KmetApp:reg' %}">Registracija</a>
-</li>
-</ul>
+
+
+
 {% endif %}
+</ul>
 {% endblock %}
-{% csrf_token %}
 
 {% block hdr %}
 
