--- a/KmetApp/templates/oglas/index.html
+++ b/KmetApp/templates/oglas/index.html
@@ -5,18 +5,24 @@
 
 
 {% block prijava %}
-{% if user.is_authenticated %}
 
+ <ul class = "nav navbar-nav navbar-left">
+    
+{% if user.is_authenticated %}
+<li>
 <a href = "{% url 'KmetApp:logOut' %}">Log Out </a>
 
 {% else %}
+<li>
 <a href = "{% url 'KmetApp:prijava' %}">Prijava </a>
-</li>
+
 <li>
 <a href = "{% url 'KmetApp:reg' %}">Registracija</a>
-</li>
-</ul>
+
+
+
 {% endif %}
+</ul>
 {% endblock %}
 
 {% block hdr %}
@@ -57,7 +63,10 @@
 	           		<li class = "description"> Opis: {{ oglas.opis_O }}	</li>
 	           		
 	            </ul>	                       	
-            	<input id ="submit1" type="submit" ng-click="oglas_gumb($event)" data-oglas="{{ oglas.oglas_id }}" data-toggle="modal" data-target="#myModal" >
+            	<button  class ="btn btn-lg btn-info" style ="
+                font-size: 12px;
+                padding: 5px 2px;"
+    type="submit" ng-click="oglas_gumb($event)" data-oglas="{{ oglas.oglas_id }}" data-toggle="modal" data-target="#myModal" >Oddaja naročila </button>
           	</div>
         </div>
         {% endverbatim %}
