--- a/KmetApp/templates/__base__.html
+++ b/KmetApp/templates/__base__.html
@@ -170,6 +170,8 @@
     <!-- Controllers -->
     <script src="{% static 'js/controllers/MainController.js' %}"></script>
 
+    <script src="{% static 'js/ui-bootstrap-tpls-2.1.3.min.js' %}"></script>
+
     <!-- ngMessages -->
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.0/angular-messages.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular-route.js"></script>
