--- a/KmetApp/static/css/bootstrap.css
+++ b/KmetApp/static/css/bootstrap.css
@@ -45,6 +45,14 @@ template {
 a {
   background-color: transparent;
 }
+.img-responsive,
+.thumbnail > img,
+.thumbnail a > img,
+.carousel-inner > .item > img,
+.carousel-inner > .item > a > img {
+  display: block;
+  max-width: 100%;
+  height: auto;
 a:active {
   background: transparent;
   text-decoration: none;
