--- a/KmetApp/templates/oglas/add.html
+++ b/KmetApp/templates/oglas/add.html
@@ -26,15 +26,15 @@
 
 	<div class="col-lg-8 col-lg-offset-2 well">
 	<div class="row">
-		     <div class="col-lg-5 col-lg-offset-4  col-md-offset-3">
+		    <div class="col-lg-5 col-lg-offset-4  col-md-offset-3">
 
-			<form method="POST" action="{% url 'KmetApp:oddaja_O' %}">
+			<form method="POST" action="{% url 'KmetApp:oddaja_O' %}" enctype="multipart/form-data">
 			<div class="col-sm-10">
-						<div class="row">
+			<div class="row">
 			
 			<div class="form-group">
 			<label>Ime oglasa</label>
-				<input type="text" name="ime_O" placeholder="Ime izdelka"  class="form-control">
+				<input type="text" name="ime_O" id="ime_O" placeholder="Ime izdelka"  class="form-control">
 			</div>
 			<div class="form-group">
 			<label>Cena izdelka</label>
@@ -47,6 +47,9 @@
 			<div class="form-group">
 			<label>Opis izdelka</label>
 				<textarea name="opis_O" placeholder="Opis Izdelka"  class="form-control" rows="2ddddddd"></textarea> 
+			</div>
+			<div class="form-group">
+			<input id="slika" type="file" name="slika">
 			</div>
 			<br>
 			<button type="submit" class = "btn btn-lg btn-info">Oddaj Oglas</button>
