--- a/KmetApp/templates/oglas/index.html
+++ b/KmetApp/templates/oglas/index.html
@@ -53,21 +53,23 @@
 
  	<div class="oglasi">
   		{% verbatim %}
- 		<div class="container">
+ 		<div class="container" ng-repeat="oglas in oglasi" >
           	
-          	<div class="item col-md-12 col-md-offset-3" ng-repeat="oglas in oglasi" >
-	            <h3 class="name"><a ng-href="http://localhost:8000/app/oglas_view/{{hash}}" >{{ oglas.ime_O }} </a>
+              <img src="{{oglas.slika}}"></img>
+              <h3 class="name"><a ng-href="#" ng-click="oglas_view(oglas.oglas_id)" >{{ oglas.ime_O }} </a>
+            <div class="item col-md-12 col-md-offset-3" >
               </h3>
 	            <ul>
 	            	<li class="price" name="cena_O">  Cena izdelka: {{ oglas.cena_O }} €/kg</li>
 	           		<li class = "quantity" name="kolicina_O"> Kolicina: {{ oglas.kolicina_O }} kg </li>
 	           		<li class = "description"> Opis: {{ oglas.opis_O }}	</li>
-	           		
+                <li class = "prodajalec"> Ime : {{oglas.prodajalec}}</li>
 	            </ul>	                       	
             	<button  class ="btn btn-lg btn-info" style ="
                 font-size: 12px;
                 padding: 5px 2px;"
     type="submit" ng-click="oglas_gumb($event)" data-oglas="{{ oglas.oglas_id }}" data-toggle="modal" data-target="#myModal" >Oddaja naročila </button>
+      <br></br>
           	</div>
         </div>
         {% endverbatim %}
