--- a/KmetApp/templates/__base__.html
+++ b/KmetApp/templates/__base__.html
@@ -101,7 +101,7 @@
              <ul style="padding-left : 0">
                 <li>  <a href="{% url 'KmetApp:kosarica' %}">Iskanje Košaric</a>
                 {% if user.is_authenticated %}
-                 <li><a href="{% url 'KmetApp:kosarica_O' %}">Oddaja oglasa</a>
+                 <li><a href="{% url 'KmetApp:kosarica_O' %}">Oddaja košarice</a>
                  <li><a href ="{% url 'KmetApp:kosarica_E' %}"> Moji oglasi </a>
                   {% endif %}
              </ul>
