--- a/KmetApp/templates/kosarica/edit_K.html
+++ b/KmetApp/templates/kosarica/edit_K.html
@@ -49,6 +49,7 @@
  		<div class="container">
           	
           	<div class="item col-md-12 col-md-offset-3" ng-repeat="kosarica in kosarice" >
+             <img src="{{oglas.slika}}" width="250" height="250"></img>
 	            <h3 class="name"> {{ kosarica.ime_K }} </h3>
 	            <ul>
 	            	<li class="price" name="cena_K">  Cena izdelka: {{ kosarica.cena_K }} €/kg</li>
