--- a/KmetApp/templates/oglas/add.html
+++ b/KmetApp/templates/oglas/add.html
@@ -45,6 +45,10 @@
 				<input type="number" name="kolicina_O" placeholder="Količina Izdelka"  class="form-control">
 			</div>
 			<div class="form-group">
+			<label>Mesto pridelave</label>
+				<input type="text" name="mesto_pridelave" placeholder="Mesto Pridelave" class="form-control">
+			</div>
+			<div class="form-group">
 			<label>Opis izdelka</label>
 				<textarea name="opis_O" placeholder="Opis Izdelka"  class="form-control" rows="2ddddddd"></textarea> 
 			</div>
