--- a/KmetApp/templates/kosarica/add_K.html
+++ b/KmetApp/templates/kosarica/add_K.html
@@ -26,7 +26,7 @@
 	<div class="row">
 		     <div class="col-lg-5 col-lg-offset-4  col-md-offset-3">
 
-			<form method="POST" action="{% url 'KmetApp:oddaja_K' %}">
+			<form method="POST" action="{% url 'KmetApp:oddaja_K' %}" enctype="multipart/form-data">
 			<div class="col-sm-10">
 				<div class="row">
 			
@@ -48,10 +48,16 @@
 				<input type="text" name="stevilo_K" placeholder="Število košaric" class="form-control">
 			</div>
 			<div class="form-group">
+			<label>Mesto pridelave</label>
+				<input type="text" name="mesto_pridelave" placeholder="Mesto Pridelave" class="form-control">
+			</div>
+			<div class="form-group">
 			<label>Opis košarice</label>
 				<input type="text" name="opis_K" rows="3"placeholder="Opis Izdelka" class="form-control">
 			</div>
-			
+			<div class="form-group">
+			<input id="slika" type="file" name="slika">
+			</div>
 			<br>
 			<button type="submit" class = "btn btn-lg btn-info">Oddaj Oglas</button>
 			<br>
