--- a/KmetApp/templates/accounts/registration.html
+++ b/KmetApp/templates/accounts/registration.html
@@ -57,6 +57,10 @@
 				</div>
 
 				<div class="row">
+				<div class="col-sm-4 form-group">
+						<label>Telefonska številka</label>
+							<input type="text" name="telefonska" placeholder="Telefonska številka " class="form-control">
+						</div>
 					<div class="col-sm-4 form-group">
 						<label>Naslov</label>
 							<input type="text" name="naslov" placeholder="Naslov " class="form-control">
